Se diseña y se coloca los estilos para el Navbar y la Seccion Home

--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto Final</title>
+    <title>ExpoJuy</title>
+    <link
+      rel="shortcut icon"
+      href="./assets/img/favicon.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
+    <header>
+      <!-- NAVBAR -->
+      <nav class="navbar">
+        <ul class="enlaces-navbar">
+          <li><a href="#evento" id="enlace-evento">Evento</a></li>
+          <li><a href="#nosotros" id="enlace-nosotros">Nosotros</a></li>
+          <li><a href="#registro" id="enlace-registro">Registrate</a></li>
+        </ul>
+        <div class="logo-navbar">
+          <a href="#home"
+            ><img
+              src="./assets/img/logo-expojuy-transparente.png"
+              alt="Logo ExpoJuy"
+          /></a>
+        </div>
+      </nav>
+
+      <!-- HOME -->
+      <div id="home" class="home">
+        <div class="home-contenido">
+          <img src="./assets/img/nombre-expo-transparente.png" alt="" />
+          <h1 class="home-titulo">07 al 16 de Octubre</h1>
+          <h2 class="home-subtitulo">CIUDAD CULTURAL</h2>
+        </div>
+      </div>
+    </header>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
