Se añade diseño y estilos de la seccion EVENTO

--- a/index.html
+++ b/index.html
@@ -40,6 +40,41 @@
       </div>
     </header>
 
+    <main>
+      <!-- SECCION EVENTO -->
+      <section id="evento" class="evento">
+        <div class="evento-contenido">
+          <div class="evento-texto">
+            <h2 class="evento-subtitulo">¿Por qué participar de la ExpoJuy?</h2>
+            <p class="evento-descripcion">
+              La Expojuy es una de las ferias más importantes del noroeste
+              argentino, en donde se tiene el acompañamiento del Gobierno, de
+              los empresarios y de los industriales, de todo el sector que está
+              en producción y que quiere mostrar su producto al mundo.
+            </p>
+            <p class="evento-descripcion">
+              La ultima edición fue en 2018 y aquí te dejamos un video con una
+              muestra de lo que fue.
+            </p>
+          </div>
+          <div class="evento-video">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/vvThZ33HfPY"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+              class="video"
+            ></iframe>
+          </div>
+        </div>
+      </section>
+
+      <!-- A partir de Aqui va la seccion NOSOTROS -->
+    </main>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
