--- a/index.html
+++ b/index.html
@@ -73,7 +73,24 @@
       </section>
 
       <!-- A partir de Aqui va la seccion NOSOTROS -->
+      <section class="nosotros" id="nosotros">
+        <div class="nosotros-imagen">
+          <img src="./assets/img/corredor bioceanico-nosotro.jpg" alt="">
+        </div> 
+        <div class="nosotros-texto">
+          <h1>
+            ExpoJuy al Mundo
+          </h1>
+          <p>
+            El objetivo es intensificar el comercio exterior, como el desarrollo del corredor bioceánico.
+            La ExpoJuy busca mostrar los distintos sectores productivos que sostienen nuestra economía Provincial: tabacalero, azucarero, legumbrero, citrícola, minero, entre otros.
+            Porque no sólo somos una provincia que exporta productos, también exportamos turismo, cultura y conocimiento.
+          </p>
+        </div>
+      </section>
+
     </main>
+
 
     <script src="./js/index.js"></script>
   </body>
