Se añaden seccion REGISTRO y FOOTER

--- a/index.html
+++ b/index.html
@@ -72,26 +72,83 @@
         </div>
       </section>
 
-      <!-- A partir de Aqui va la seccion NOSOTROS -->
+      <!-- SECCION NOSOTROS -->
       <section class="nosotros" id="nosotros">
         <div class="nosotros-imagen">
-          <img src="./assets/img/corredor bioceanico-nosotro.jpg" alt="">
-        </div> 
+          <img src="./assets/img/corredor bioceanico-nosotro.jpg" alt="" />
+        </div>
         <div class="nosotros-texto">
-          <h1>
-            ExpoJuy al Mundo
-          </h1>
+          <h1>ExpoJuy al Mundo</h1>
           <p>
-            El objetivo es intensificar el comercio exterior, como el desarrollo del corredor bioceánico.
-            La ExpoJuy busca mostrar los distintos sectores productivos que sostienen nuestra economía Provincial: tabacalero, azucarero, legumbrero, citrícola, minero, entre otros.
-            Porque no sólo somos una provincia que exporta productos, también exportamos turismo, cultura y conocimiento.
+            El objetivo es intensificar el comercio exterior, como el desarrollo
+            del corredor bioceánico. La ExpoJuy busca mostrar los distintos
+            sectores productivos que sostienen nuestra economía Provincial:
+            tabacalero, azucarero, legumbrero, citrícola, minero, entre otros.
+            Porque no sólo somos una provincia que exporta productos, también
+            exportamos turismo, cultura y conocimiento.
           </p>
         </div>
       </section>
 
+      <!-- SECCION REGISTRO -->
+      <section id="registro" class="registro">
+        <div class="registro-texto">
+          <h2 class="registro-subtitulo">Registrate en el Evento</h2>
+          <p class="registro-descripcion">
+            Completa el formulario con tus datos y con los de tu comercio, y
+            preparate para vivir la experiencia más importante del año!!
+          </p>
+        </div>
+        <div class="registro-form">
+          <form action="" id="form">
+            <div class="campos">
+              <input
+                type="text"
+                name="comercio"
+                placeholder="Nombre del Comercio"
+                class="campo"
+                id="comercio"
+              />
+            </div>
+            <div class="campos">
+              <input
+                type="text"
+                name="titular"
+                placeholder="Titular del Comercio"
+                class="campo"
+                id="titular"
+              />
+            </div>
+            <div class="campos">
+              <input
+                type="tel"
+                name="celular"
+                placeholder="Celular"
+                class="campo"
+                id="celular"
+              />
+            </div>
+            <div class="enviar">
+              <button class="btn-enviar" type="submit" id="btn-enviar">
+                Enviar
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
 
-
+    <footer class="footer">
+      <h3 class="footer-texto">Contactanos</h3>
+      <a href="https://wa.me/543885213007" class="enlace-wsp" target="_blank"
+        >Misael Vilca
+        <img class="logo-wsp" src="./assets/img/whatsapp.png" alt=""
+      /></a>
+      <a href="https://wa.me/543888566781" class="enlace-wsp" target="_blank"
+        >Miguel Navarro
+        <img class="logo-wsp" src="./assets/img/whatsapp.png" alt=""
+      /></a>
+    </footer>
     <script src="./js/index.js"></script>
   </body>
 </html>
