--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
           </form>
         </div>
       </section>
+      <section class="pronostico">
+        <h1 class="pronostico-texto">El Clima en el Lugar del Evento</h1>
+        <div class="pronostico-info"></div>
+      </section>
     </main>
 
     <footer class="footer">
