seccion nosotros (correccion)

--- a/index.html
+++ b/index.html
@@ -74,18 +74,17 @@
 
       <!-- SECCION NOSOTROS -->
       <section class="nosotros" id="nosotros">
+        
         <div class="nosotros-imagen">
-          <img src="./assets/img/corredor bioceanico-nosotro.jpg" alt="" />
+          <img src="./assets/img/Organizadores-nosotros.jfif" alt="" />
         </div>
+
         <div class="nosotros-texto">
           <h1>ExpoJuy al Mundo</h1>
           <p>
-            El objetivo es intensificar el comercio exterior, como el desarrollo
-            del corredor bioceánico. La ExpoJuy busca mostrar los distintos
-            sectores productivos que sostienen nuestra economía Provincial:
-            tabacalero, azucarero, legumbrero, citrícola, minero, entre otros.
-            Porque no sólo somos una provincia que exporta productos, también
-            exportamos turismo, cultura y conocimiento.
+            Organizada por la Cámara de Comercio Exterior de Jujuy con el apoyo del Gobierno de la Provincia y la Municipalidad de San Salvador de Jujuy,
+             del 7 al 16 de octubre se desarrollará en la Ciudad Cultural la decimoquinta edición de la ExpoJuy, evento que permitirá mostrar al país 
+             y a nivel internacional el potencial económico, productivo y comercial de la provincia
           </p>
         </div>
       </section>
