--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./css/index.css" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <header>
@@ -74,17 +75,17 @@
 
       <!-- SECCION NOSOTROS -->
       <section class="nosotros" id="nosotros">
-        
         <div class="nosotros-imagen">
           <img src="./assets/img/Organizadores-nosotros.jfif" alt="" />
         </div>
 
         <div class="nosotros-texto">
-          <h1>ExpoJuy al Mundo</h1>
+          <h1>Organizadores</h1>
           <p>
-            Organizada por la Cámara de Comercio Exterior de Jujuy con el apoyo del Gobierno de la Provincia y la Municipalidad de San Salvador de Jujuy,
-             del 7 al 16 de octubre se desarrollará en la Ciudad Cultural la decimoquinta edición de la ExpoJuy, evento que permitirá mostrar al país 
-             y a nivel internacional el potencial económico, productivo y comercial de la provincia
+            Desde la Cámara de Comercio Exterior de Jujuy con el apoyo del
+            Gobierno de la Provincia y la Municipalidad de San Salvador de
+            Jujuy, buscamos mostrar al país y a nivel internacional el potencial
+            económico, productivo y comercial de la provincia
           </p>
         </div>
       </section>
@@ -112,10 +113,10 @@
             <div class="campos">
               <input
                 type="text"
-                name="titular"
-                placeholder="Titular del Comercio"
+                name="propietario"
+                placeholder="Nombre del Propietario"
                 class="campo"
-                id="titular"
+                id="propietario"
               />
             </div>
             <div class="campos">
@@ -129,7 +130,7 @@
             </div>
             <div class="enviar">
               <button class="btn-enviar" type="submit" id="btn-enviar">
-                Enviar
+                Registrarse
               </button>
             </div>
           </form>
@@ -143,7 +144,7 @@
 
     <footer class="footer">
       <h3 class="footer-texto">Contactanos</h3>
-      <a href="https://wa.me/543885213007" class="enlace-wsp" target="_blank"
+      <a href="https://wa.me/543884761727" class="enlace-wsp" target="_blank"
         >Misael Vilca
         <img class="logo-wsp" src="./assets/img/whatsapp.png" alt=""
       /></a>
